# FastAPI-The-Complete-Course

./: .env.example  README.md  pyproject.toml
.devcontainer/: .bashrc  Dockerfile  devcontainer.json  postcreate.sh
.github/: copilot-instructions.md
Project 3.5/TodoApp/: database.py
fastapi_udemy_course.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
